Changelog
=========

4.1.0 (unreleased)
------------------

- Drop Python 2.6 support.

- Add ``BCRYPTHashingScheme``, optionally available if package is
  installed with the `bcrypt` extra.


4.0.0 (2015-09-30)
------------------

- Supporting Python 3.3 up to 3.5 and PyPy2.

- Added ``SHA256DigestScheme``.


3.0.0 (2015-09-28)
------------------

- Extracted from ``AccessControl 3.0.11``