@@ -1,0 +1,10 @@
+[run]
+source = AuthEncoding
+
+[report]
+precision = 2
+exclude_lines =
+    pragma: no cover
+    if __name__ == '__main__':
+    raise NotImplementedError
+    raise AssertionError
