@@ -1,20 +1,0 @@
-[buildout]
-develop = .
-parts = interpreter test coverage
-
-[interpreter]
-recipe = zc.recipe.egg
-interpreter = python
-eggs = AuthEncoding
-
-[test]
-recipe = zc.recipe.egg
-eggs = pytest
-       pytest-remove-stale-bytecode
-       AuthEncoding
-scripts = py.test=test
-
-[coverage]
-recipe = zc.recipe.testrunner
-eggs = AuthEncoding
-defaults = ['--coverage', '../../coverage', '-v', '--auto-progress']
