@@ -1,10 +1,29 @@
 [tox]
-envlist = py27, pypy, py33, py34, py35
+envlist =
+    flake8,
+    py27,
+    pypy,
+    py35,
+    py36,
+    py37,
+    pypy3,
 minversion = 1.6
 
 [testenv]
 deps = pytest >= 2.9
        pytest-cov
-commands = py.test --cov=src --cov-report=html --junitxml=testreport.xml
-install_command = pip install --egg {opts} {packages}
+extras = bcrypt
+commands = py.test \
+           --cov=src \
+           --cov-report=html \
+           --cov-report=term \
+           --cov-fail-under=93
 usedevelop = True
+
+[testenv:flake8]
+basepython = python3.6
+skip_install = true
+deps =
+    flake8
+commands =
+    flake8 src setup.py
